Добавлена миграция в базу данных и подключение к БД при запуске сервиса

--- a/VSOSH.Service/appsettings.Development.json
+++ b/VSOSH.Service/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "Database": "Server=127.0.0.1;Port=5456;Database=vsosh;UserId=postgres;Password=psg;"
   }
 }
