--- a/VSOSH.Service/VSOSH.Service.csproj
+++ b/VSOSH.Service/VSOSH.Service.csproj
@@ -8,11 +8,16 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.10"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.10">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="NSwag.AspNetCore" Version="14.1.0" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\VSOSH.Contracts\VSOSH.Contracts.csproj" />
+        <ProjectReference Include="..\VSOSH.Dal\VSOSH.Dal.csproj"/>
       <ProjectReference Include="..\VSOSH.Domain\VSOSH.Domain.csproj" />
     </ItemGroup>
 
