--- a/VSOSH.Service/appsettings.json
+++ b/VSOSH.Service/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "Database": "Server=127.0.0.1;Port=5456;Database=vsosh;UserId=postgres;Password=psg;"
+  },
   "AllowedHosts": "*"
 }
