Доделан полностью backend и начат рефакторинг в ui

--- a/VSOSH.Dal/VSOSH.Dal.csproj
+++ b/VSOSH.Dal/VSOSH.Dal.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\VSOSH.Contracts\VSOSH.Contracts.csproj"/>
       <ProjectReference Include="..\VSOSH.Domain\VSOSH.Domain.csproj" />
     </ItemGroup>
 
