--- a/VSOSH.UI/VSOSH.UI.csproj
+++ b/VSOSH.UI/VSOSH.UI.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-      <TargetFramework>net8.0-windows</TargetFramework>
+    <TargetFramework>net8.0-windows</TargetFramework>
     <OutputType>WinExe</OutputType>
       <LangVersion>12</LangVersion>
       <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
@@ -8,6 +8,15 @@
       <ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\VSOSH.HttpClient\VSOSH.HttpClient.csproj" />
+    <ProjectReference Include="..\VSOSH.Dal\VSOSH.Dal.csproj" />
+    <ProjectReference Include="..\VSOSH.Domain\VSOSH.Domain.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.2" />
+  </ItemGroup>
+    <ItemGroup>
+        <EmbeddedResource Include="appsettings.json">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </EmbeddedResource>
+    </ItemGroup>
 </Project>
