--- a/VSOSH.UI/VSOSH.UI.csproj
+++ b/VSOSH.UI/VSOSH.UI.csproj
@@ -13,6 +13,8 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.2" />
+      <PackageReference Include="Serilog.Settings.Configuration" Version="9.0.0"/>
+      <PackageReference Include="Serilog.Sinks.File" Version="7.0.0"/>
   </ItemGroup>
     <ItemGroup>
         <EmbeddedResource Include="appsettings.json">
